Revamp homepage layout and styles
Updated the layout and styles of the homepage, including a new header structure and additional CSS for improved design.

--- a/app.html
+++ b/app.html
@@ -4,86 +4,260 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>智绘旅途 | 首页</title>
-  <link rel="stylesheet" href="styles.css" />
+
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background: #f6faff;
+    }
+
+    /* 顶部导航栏蓝色风格 */
+    .site-header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 15px 35px;
+      background: #1d6ce0;
+      color: white;
+    }
+
+    .brand-title {
+      font-size: 26px;
+      font-weight: bold;
+      margin: 0;
+    }
+
+    .header-right a {
+      color: white;
+      text-decoration: none;
+      margin-left: 20px;
+      font-size: 16px;
+      font-weight: bold;
+    }
+
+    .header-right a:hover {
+      text-decoration: underline;
+    }
+
+    /* 主体左右布局 */
+    .main-layout {
+      display: flex;
+      padding: 40px 50px;
+      gap: 40px;
+    }
+
+    /* 左侧提示栏 */
+    .left-info {
+      width: 28%;
+      padding: 20px;
+      background: #ffffff;
+      border-radius: 10px;
+      border: 1px solid #dce7ff;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.06);
+    }
+
+    .left-info h2 {
+      margin-top: 0;
+      color: #1d6ce0;
+    }
+
+    .left-info p {
+      color: #444;
+      line-height: 1.6;
+    }
+
+    /* 右侧主体内容 */
+    .right-content {
+      width: 70%;
+    }
+
+    /* 搜索栏 */
+    .search-area {
+      display: flex;
+      margin-bottom: 20px;
+    }
+
+    .search-input {
+      flex: 1;
+      padding: 12px;
+      border-radius: 6px;
+      border: 1px solid #b9cfff;
+    }
+
+    .btn-search {
+      padding: 12px 25px;
+      margin-left: 10px;
+      border: none;
+      background: #1d6ce0;
+      color: white;
+      border-radius: 6px;
+      cursor: pointer;
+    }
+
+    .btn-search:hover {
+      background: #1555b0;
+    }
+
+    /* Hero区 */
+    .hero {
+      display: flex;
+      justify-content: space-between;
+      margin-top: 25px;
+      gap: 20px;
+    }
+
+    .intro h2 {
+      margin: 0;
+      color: #1d6ce0;
+    }
+
+    .intro p {
+      margin-top: 10px;
+      color: #555;
+    }
+
+    .ad-slot img {
+      width: 260px;
+      border-radius: 8px;
+      border: 1px solid #dce7ff;
+    }
+
+    /* 三个功能面板 */
+    .panels {
+      display: flex;
+      gap: 20px;
+      margin-top: 30px;
+    }
+
+    .panel {
+      width: 33%;
+      text-decoration: none;
+      color: #000;
+      background: white;
+      border-radius: 10px;
+      border: 1px solid #dce7ff;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.06);
+      overflow: hidden;
+      transition: 0.2s;
+    }
+
+    .panel:hover {
+      transform: translateY(-3px);
+      box-shadow: 0 6px 10px rgba(0,0,0,0.08);
+    }
+
+    .panel img {
+      width: 100%;
+      height: 160px;
+      object-fit: cover;
+    }
+
+    .panel-body {
+      padding: 12px;
+    }
+
+    .panel-body h3 {
+      margin: 0;
+      color: #1d6ce0;
+      font-size: 18px;
+    }
+
+    .panel-body p {
+      margin-top: 8px;
+      color: #555;
+      font-size: 14px;
+      line-height: 1.5;
+    }
+
+    /* 底部 */
+    .site-footer {
+      text-align: center;
+      padding: 20px;
+      background: #1d6ce0;
+      color: white;
+      margin-top: 40px;
+    }
+  </style>
 </head>
+
 <body>
+
+  <!-- 顶部导航 -->
   <header class="site-header">
-    <div class="header-left">
-      <!-- 替换为你的 logo 图片：assets/logo.png -->
-      <img src="assets/logo-placeholder.png" alt="智绘旅途 Logo" class="logo" />
-      <div class="brand">
-        <h1>智绘旅途</h1>
-        <p class="slogan">灵活出行，智在不设限</p>
-      </div>
-    </div>
+    <h1 class="brand-title">智绘旅途</h1>
     <nav class="header-right">
-      <a href="#" class="btn btn-outline">注册</a>
-      <a href="#" class="btn btn-primary">登录</a>
+      <a href=" ">登录</a >
+      <a href="#">注册</a >
     </nav>
   </header>
 
-  <main class="container">
-    <section class="search-area">
-      <input type="text" class="search-input" placeholder="请输入您的地点或要求" />
-      <button class="btn btn-search">搜索</button>
-    </section>
+  <!-- 整体左右布局 -->
+  <main class="main-layout">
 
-    <section class="hero">
-      <div class="intro">
-        <h2>通过 AI 重构个性化旅行体验</h2>
-        <p>精准解析偏好、动态生成全链条方案、全程私人管家式陪伴</p>
-      </div>
-      <div class="ad-slot">
-        <!-- 广告/横幅占位（替换 assets/ad-placeholder.png） -->
-        <img src="assets/ad-placeholder.png" alt="广告位" />
-      </div>
-    </section>
+    <!-- 左侧提醒区 -->
+    <aside class="left-info">
+      <h2>欢迎来到 智绘旅途</h2>
+      <p>基于 AI 的全链条个性化旅行助手</p >
+      <p>从偏好分析、行程规划、到智能提醒，一站式服务。</p >
+      <p>请选择右侧板块开始使用！</p >
+    </aside>
 
-    <section class="panels">
-      <a class="panel" href="profile.html" aria-label="用户画像">
-        <div class="panel-media">
-          <!-- 插入用户画像相关图片：assets/panel-profile.png -->
-          <img src="assets/panel-profile.png" alt="用户画像" />
-        </div>
-        <div class="panel-body">
-          <h3>用户画像</h3>
-          <p>整合多渠道数据，精准描绘用户偏好，为出游决策打下基础。</p>
-        </div>
-      </a>
+    <!-- 右侧功能区 -->
+    <section class="right-content">
 
-      <a class="panel" href="generator.html" aria-label="AI 智能生成">
-        <div class="panel-media">
-          <!-- 插入方案可视化图片：assets/panel-generator.png -->
-          <img src="assets/panel-generator.png" alt="AI 智能生成" />
-        </div>
-        <div class="panel-body">
-          <h3>AI 智能生成</h3>
-          <p>选择标签后生成多套可编辑的全链条行程方案并可视化呈现。</p>
-        </div>
-      </a>
+      <!-- 搜索栏 -->
+      <section class="search-area">
+        <input type="text" class="search-input" placeholder="请输入您的地点或要求">
+        <button class="btn-search">搜索</button>
+      </section>
 
-      <a class="panel" href="concierge.html" aria-label="旅行私人管家">
-        <div class="panel-media">
-          <!-- 插入私人管家图片：assets/panel-concierge.png -->
-          <img src="assets/panel-concierge.png" alt="旅行私人管家" />
+      <!-- Hero -->
+      <section class="hero">
+        <div class="intro">
+          <h2>AI 重新定义你的旅行方式</h2>
+          <p>偏好识别 | 智能规划 | 个性陪伴式旅行体验</p >
         </div>
-        <div class="panel-body">
-          <h3>旅行私人管家</h3>
-          <p>自动提醒/跳转订票酒店，闲时智能推荐周边游玩。</p>
+        <div class="ad-slot">
+          < img src="assets/ad-placeholder.png" alt="广告位">
         </div>
-      </a>
-    </section>
+      </section>
 
-    <section class="foot-space">
-      <!-- 预留更多空间用于放置景点展示图、广告等 -->
-      <div class="gallery-placeholder">
-        <p>景点图片 / 活动广告位（请替换 assets/gallery-*.png）</p>
-      </div>
+      <!-- 功能面板 -->
+      <section class="panels">
+
+        <a class="panel" href="profile.html">
+          < img src="assets/panel-profile.png" alt="用户画像">
+          <div class="panel-body">
+            <h3>用户画像</h3>
+            <p>整合多渠道数据，精准描绘你的旅行偏好。</p >
+          </div>
+        </a >
+
+        <a class="panel" href="generator.html">
+          < img src="assets/panel-generator.png" alt="AI 智能生成">
+          <div class="panel-body">
+            <h3>AI 智能生成</h3>
+            <p>标签选择 → 多方案生成 → 全链条行程一键可视化。</p >
+          </div>
+        </a >
+
+        <a class="panel" href="concierge.html">
+          < img src="assets/panel-concierge.png" alt="旅行私人管家">
+          <div class="panel-body">
+            <h3>旅行私人管家</h3>
+            <p>自动提醒订票酒店、实时推荐周边游玩。</p >
+          </div>
+        </a >
+
+      </section>
+
     </section>
   </main>
 
   <footer class="site-footer">
-    <p>© 2025 智绘旅途 | 推动旅行服务从“千人一面”向“千人千面”升级</p>
+    © 2025 智绘旅途 | AI 赋能旅行，智在不设限
   </footer>
+
 </body>
 </html>
