--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
   body {
     margin: 0;
     font-family: "Segoe UI", Arial, sans-serif;
-    background: url("assets/your-bg.jpg") no-repeat center center/cover;
+    background: url("true.jpg") no-repeat center center/cover;
     height: 100vh;
     color: white;
     position: relative;
