--- a/profile.html
+++ b/profile.html
@@ -4,68 +4,287 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>智绘旅途 | 用户画像</title>
-  <link rel="stylesheet" href="styles.css" />
+  <style>
+    :root{
+      --blue-500: #1d6ce0;
+      --blue-600: #1555b0;
+      --blue-100: #eaf5ff;
+      --muted: #4b6173;
+      --card-bg: #ffffff;
+      --accent: #2b8bf6;
+      --pill-bg: #eef6ff;
+    }
+    *{box-sizing:border-box;}
+    html,body{height:100%;}
+    body{
+      margin:0;
+      font-family: "PingFang SC", "Helvetica Neue", Arial, sans-serif;
+      color:var(--muted);
+      background: linear-gradient(180deg, #f7fbff 0%, #eef7ff 100%);
+      padding-bottom:72px;
+    }
+
+    /* Header */
+    .site-header{
+      display:flex;
+      justify-content:space-between;
+      align-items:center;
+      padding:14px 22px;
+      background:var(--blue-500);
+      color:#fff;
+      position:sticky;
+      top:0;
+      z-index:100;
+    }
+    .header-left{display:flex;align-items:center;gap:12px;}
+    .back-link{color:rgba(255,255,255,0.95);text-decoration:none;font-size:0.95rem;}
+    .small-logo{height:44px;width:44px;border-radius:8px;background:#fff;padding:6px;object-fit:contain;}
+    .brand h1{margin:0;font-size:1.05rem;color:#fff;}
+    .brand .slogan{margin:0;color:rgba(255,255,255,0.9);font-size:0.85rem;}
+    .header-right{display:flex;gap:10px;align-items:center;}
+    .btn{display:inline-block;padding:8px 12px;border-radius:8px;background:var(--blue-500);color:#fff;border:none;cursor:pointer;font-size:0.95rem;}
+    .btn:hover{background:var(--blue-600);}
+    .btn-outline{background:transparent;color:var(--blue-500);border:1px solid rgba(29,108,224,0.12);}
+    .btn-primary{background:var(--accent);color:#fff;}
+
+    /* Layout */
+    .container{max-width:1180px;margin:20px auto;padding:0 18px 24px 18px;}
+    .profile-grid{display:grid;grid-template-columns:2fr 1fr;gap:20px;align-items:start;}
+    @media (max-width:980px){ .profile-grid{grid-template-columns:1fr;} }
+
+    /* Card */
+    .card{background:var(--card-bg);padding:16px;border-radius:12px;box-shadow:0 8px 24px rgba(41,102,173,0.06);border:1px solid rgba(29,108,224,0.06);margin-bottom:16px;}
+    .card-blue{border-left:6px solid var(--blue-500);}
+    .card-title{margin:0 0 10px 0;color:var(--blue-600);font-size:1.05rem;}
+    .muted{color:var(--muted);font-size:0.95rem;}
+
+    /* profile form */
+    .field{display:flex;flex-direction:column;margin-bottom:10px;}
+    .field label{font-weight:600;color:var(--blue-600);margin-bottom:6px;}
+    .field input[type="text"], .field select, .field textarea{padding:10px;border-radius:8px;border:1px solid rgba(29,108,224,0.08);font-size:0.95rem;}
+    .field textarea{min-height:100px;resize:vertical;}
+
+    .channels{display:flex;flex-wrap:wrap;gap:8px;margin-top:8px;}
+    .channel{padding:8px 10px;border-radius:8px;border:1px solid rgba(29,108,224,0.08);background:linear-gradient(180deg,#fff,#f6fbff);color:var(--blue-600);font-size:0.92rem;cursor:pointer;}
+    .channel.active{background:var(--accent);color:#fff;border-color:transparent;box-shadow:0 8px 20px rgba(43,139,246,0.12);}
+
+    /* persona preview */
+    .persona{display:flex;gap:12px;align-items:center;}
+    .avatar{width:76px;height:76px;border-radius:12px;background:linear-gradient(180deg,#fff,#f3f9ff);display:flex;align-items:center;justify-content:center;font-weight:700;color:var(--blue-600);border:1px solid rgba(29,108,224,0.06);}
+    .persona-info{flex:1;}
+    .tag-row{display:flex;gap:8px;flex-wrap:wrap;margin-top:8px;}
+    .pill{background:var(--pill-bg);color:var(--blue-600);padding:6px 10px;border-radius:999px;font-size:0.86rem;border:1px solid rgba(29,108,224,0.06);}
+
+    /* family list */
+    .family-list{margin-top:8px;display:flex;flex-direction:column;gap:8px;}
+    .family-item{display:flex;justify-content:space-between;align-items:center;padding:8px;border-radius:8px;background:#f8fbff;border:1px solid rgba(29,108,224,0.06);}
+
+    /* sample image / ad */
+    .img-box{height:120px;border-radius:8px;background:#f6fbff;border:1px dashed rgba(29,108,224,0.06);display:flex;align-items:center;justify-content:center;overflow:hidden;}
+    .img-box img{width:100%;height:100%;object-fit:cover;}
+
+    /* bottom strip */
+    .bottom-strip{position:fixed;left:0;right:0;bottom:0;background:var(--blue-500);color:#fff;padding:12px 18px;box-shadow:0 -6px 20px rgba(26,90,170,0.12);}
+    .bottom-container{max-width:1180px;margin:0 auto;display:flex;justify-content:space-between;align-items:center;}
+    .bottom-title{font-weight:700;}
+    .bottom-note{opacity:0.95;font-size:0.92rem;}
+  </style>
 </head>
 <body>
-  <header class="site-header small">
-    <div class="header-left">
-      <a href="index.html" class="back-link">← 返回首页</a>
-      <img src="assets/logo-placeholder.png" alt="Logo" class="logo small-logo" />
-      <div class="brand">
-        <h1>用户画像</h1>
-        <p class="slogan">整合多渠道，精准刻画偏好</p>
-      </div>
+
+<header class="site-header">
+  <div class="header-left">
+    <a href="index.html" class="back-link">← 返回首页</a>
+    <img src="assets/logo-placeholder.png" alt="智绘旅途 Logo" class="small-logo" />
+    <div class="brand">
+      <h1>用户画像</h1>
+      <p class="slogan">整合多渠道，精准刻画偏好</p>
     </div>
-    <nav class="header-right">
-      <a href="#" class="btn btn-outline">注册</a>
-      <a href="#" class="btn btn-primary">登录</a>
-    </nav>
-  </header>
+  </div>
 
-  <main class="container">
-    <section class="panel-page">
-      <div class="panel-left">
-        <div class="card">
-          <h2>构建用户画像</h2>
-          <p>导入/连接 多渠道数据（偏好、历史、家庭成员等），系统将合成用户画像。</p>
-          <div class="actions">
-            <button class="btn">开始构建用户画像</button>
-            <button class="btn btn-outline">上传偏好数据</button>
-            <button class="btn btn-outline">设置家庭成员</button>
+  <nav class="header-right">
+    <button class="btn btn-outline" id="regBtn">注册</button>
+    <button class="btn btn-primary" id="loginBtn">登录</button>
+  </nav>
+</header>
+
+<main class="container">
+  <div class="profile-grid">
+    <!-- Left: Profile Builder -->
+    <section>
+      <div class="card card-blue">
+        <h2 class="card-title">构建用户画像</h2>
+        <p class="muted">连接多渠道数据或手动填写偏好，系统将合成个人或家庭画像，供 AI 生成个性化方案。</p>
+
+        <div class="field">
+          <label>姓名 / 昵称</label>
+          <input type="text" id="userName" placeholder="例如：李先生 / 小王" />
+        </div>
+
+        <div class="field">
+          <label>旅行偏好（一句话描述）</label>
+          <input type="text" id="userPref" placeholder="例如：喜欢美食与轻徒步，偏好中等预算" />
+        </div>
+
+        <div class="field">
+          <label>同步渠道</label>
+          <div class="channels" id="channels">
+            <div class="channel" data-source="浏览历史">浏览历史</div>
+            <div class="channel" data-source="社交媒体">社交媒体</div>
+            <div class="channel" data-source="出行记录">出行记录</div>
+            <div class="channel" data-source="浏览收藏">浏览/收藏</div>
+            <div class="channel" data-source="家庭日程">家庭日程</div>
+            <div class="channel" data-source="评分/点评">评分/点评</div>
           </div>
         </div>
 
-        <div class="card">
-          <h2>画像示例 / 占位图</h2>
-          <div class="img-box">
-            <img src="assets/profile-sample.png" alt="画像示例" />
+        <div class="field">
+          <label>家庭成员 / 同行者</label>
+          <div class="family-list" id="familyList">
+            <!-- sample item -->
+            <div class="family-item"><div>张女士 · 夫妻</div><div><button class="btn small" data-action="remove">删除</button></div></div>
           </div>
+          <div style="margin-top:8px;display:flex;gap:8px;">
+            <input type="text" id="familyInput" placeholder="添加成员，例如：王小明 · 儿童" style="flex:1;padding:8px;border-radius:8px;border:1px solid rgba(29,108,224,0.08)"/>
+            <button class="btn" id="addFamily">添加</button>
+          </div>
+        </div>
+
+        <div style="margin-top:12px;">
+          <button class="btn btn-primary" id="buildProfile">开始构建画像</button>
+          <button class="btn btn-outline" id="uploadData">上传偏好数据</button>
         </div>
       </div>
 
-      <aside class="panel-right">
-        <div class="card small">
-          <h3>同步渠道</h3>
-          <ul class="feature-list">
-            <li>社交偏好</li>
-            <li>出行历史</li>
-            <li>浏览与收藏</li>
-            <li>家庭/出行同伴属性</li>
-          </ul>
+      <div class="card card-blue">
+        <h2 class="card-title">画像示例 / 占位图</h2>
+        <div class="img-box">
+          <img src="assets/profile-sample.png" alt="画像示例">
         </div>
+      </div>
+    </section>
 
-        <div class="card small">
-          <h3>广告 / 推广位</h3>
-          <div class="img-box small">
-            <img src="assets/ad-placeholder.png" alt="广告位" />
+    <!-- Right: Preview & Insights -->
+    <aside>
+      <div class="card card-blue">
+        <h3 class="card-title">画像预览</h3>
+        <div class="persona">
+          <div class="avatar" id="avatar">李</div>
+          <div class="persona-info">
+            <div style="display:flex;justify-content:space-between;align-items:center;">
+              <strong id="previewName">李先生</strong>
+              <span style="color:var(--muted);font-size:0.9rem" id="previewUpdated">未更新</span>
+            </div>
+            <div id="previewPref" class="muted" style="margin-top:6px;">偏好：美食 / 轻徒步 / 中等预算</div>
+            <div class="tag-row" id="previewTags">
+              <span class="pill">亲子</span>
+              <span class="pill">美食</span>
+            </div>
           </div>
         </div>
-      </aside>
-    </section>
-  </main>
+        <div style="margin-top:12px;">
+          <button class="btn" id="applyToGenerator">使用画像生成方案</button>
+          <button class="btn btn-outline" id="exportProfile">导出画像</button>
+        </div>
+      </div>
 
-  <footer class="site-footer">
-    <p>智绘旅途 · 用户画像板块</p>
-  </footer>
+      <div class="card card-blue">
+        <h3 class="card-title">画像洞察</h3>
+        <ul class="feature-list">
+          <li>常去城市：上海、杭州</li>
+          <li>偏好节奏：适中</li>
+          <li>常用交通：高铁 / 出租</li>
+          <li>预算倾向：中等</li>
+        </ul>
+      </div>
+
+      <div class="card card-blue">
+        <h3 class="card-title">广告 / 合作位</h3>
+        <div class="img-box">
+          <img src="assets/ad-placeholder.png" alt="广告位">
+        </div>
+      </div>
+    </aside>
+  </div>
+</main>
+
+<footer class="bottom-strip">
+  <div class="bottom-container">
+    <span class="bottom-title">智慧旅途 · 智绘旅途</span>
+    <span class="bottom-note">© 2025 智绘旅途</span>
+  </div>
+</footer>
+
+<script>
+  (function(){
+    // channel toggle
+    const channels = document.querySelectorAll('#channels .channel');
+    channels.forEach(ch => {
+      ch.addEventListener('click', () => ch.classList.toggle('active'));
+    });
+
+    // family add/remove
+    const addBtn = document.getElementById('addFamily');
+    const familyInput = document.getElementById('familyInput');
+    const familyList = document.getElementById('familyList');
+
+    addBtn.addEventListener('click', ()=>{
+      const val = familyInput.value.trim();
+      if(!val){ alert('请输入成员信息后点击添加'); return; }
+      const item = document.createElement('div');
+      item.className = 'family-item';
+      item.innerHTML = `<div>${val}</div><div><button class="btn small" data-action="remove">删除</button></div>`;
+      familyList.appendChild(item);
+      familyInput.value = '';
+    });
+
+    familyList.addEventListener('click', (e)=>{
+      if(e.target && e.target.dataset && e.target.dataset.action === 'remove'){
+        const node = e.target.closest('.family-item');
+        if(node) node.remove();
+      }
+    });
+
+    // build profile (UI demo)
+    document.getElementById('buildProfile').addEventListener('click', ()=>{
+      const name = document.getElementById('userName').value.trim() || '李先生';
+      const pref = document.getElementById('userPref').value.trim() || '偏好：美食 / 轻徒步 / 中等预算';
+      const activeChannels = Array.from(document.querySelectorAll('#channels .channel.active')).map(c=>c.dataset.source);
+      // update preview
+      document.getElementById('previewName').textContent = name;
+      document.getElementById('previewPref').textContent = pref;
+      document.getElementById('previewUpdated').textContent = new Date().toLocaleString();
+      document.getElementById('avatar').textContent = name.charAt(0) || '李';
+      // tags update (simple: use channels as tags)
+      const previewTags = document.getElementById('previewTags');
+      previewTags.innerHTML = '';
+      (activeChannels.length ? activeChannels : ['浏览历史','出行记录']).slice(0,4).forEach(t=>{
+        const s = document.createElement('span'); s.className='pill'; s.textContent = t;
+        previewTags.appendChild(s);
+      });
+      alert('画像构建完成（UI 演示）');
+    });
+
+    // upload placeholder
+    document.getElementById('uploadData').addEventListener('click', ()=>{
+      alert('上传偏好数据（占位）。请在实际项目中实现文件上传/同步逻辑。');
+    });
+
+    // apply to generator (navigate)
+    document.getElementById('applyToGenerator').addEventListener('click', ()=>{
+      // In a full app, this would pass profile to generator. For now, navigate.
+      window.location.href = 'generator.html';
+    });
+
+    // export profile (placeholder)
+    document.getElementById('exportProfile').addEventListener('click', ()=>{
+      alert('导出画像（占位）。将生成的画像导出为 JSON 或 PDF。');
+    });
+
+    // header buttons (placeholders)
+    document.getElementById('regBtn').addEventListener('click', ()=> alert('注册（占位）'));
+    document.getElementById('loginBtn').addEventListener('click', ()=> alert('登录（占位）'));
+  })();
+</script>
 </body>
 </html>
